--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "loft-taxi-mui-theme": "^1.2.0",
+    "mapbox-gl": "^2.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-testing-library": "^8.0.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
